# misc

./: LICENSE  README.md
2DOBB/: 2DOBB.h  README.md
cardgen/: README.md  card.css  card.js  index.html  readme.txt
cgpp3/: README.md  cgpp-support.cpp  cgpp-support.h
convertToObj/: README.md  convertToOBJ.cpp
getip/: README.md  getip.cpp
glProject/: README.md  glProject.cpp
glToScreen/: README.md  glToScreen.cpp
indent++/: CHANGES  COPYING  MANIFEST  README.md  VERSION  aclocal.m4  bcpp.cfg  bcppall.bat  config.status  configure  configure.in  indent.bat  indent.cfg  makefile  makefile.in
indent++/code/: .vilerc  anyobj.cpp  anyobj.h  autoconf.h  backup.cpp  baseq.cpp  baseq.h  bcpp.cfg  bcpp.cpp  bcpp.h  cmdline.cpp  cmdline.h  config.cpp  config.h  debug.cpp  execsql.cpp  hanging.cpp  html.cpp  makefile  makefile.blc  makefile.in  makefile.unx  makefile.wnt  run-test  stacklis.cpp  stacklis.h  strings.cpp  tabs.cpp  verbose.cpp
indent++/code/tmp/code/: .icompile-cache  filelist.txt
indent++/package/: bcpp.spec
indent++/package/debian/: README.Debian  changelog  control  copyright  rules
indent++/txtdocs/: bcpp.1  hirachy.txt  manual.txt
indent++/wpdocs/: hirachy.doc  manual.doc
infix/: README.md  infix.scm
javadoom/: Camera.java  Debug.java  Doom.java  Game.java  Intersection.java  README.md  Ray.java  Renderer.j  Vector2.java  Wall.java  World.java
javarasterizer/: Main.java  README.md  Rasterizer.java  Screen.java  ScreenVertex.java  Terrain.java  Vector2.java
javasandbox/: README.md  Sandbox.java
jschat/: README.md  chat.css  (+4 more)
(+253 files in other folders)
