dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 1.7 2005/07/25 20:36:29 tom Exp $
AC_PREREQ(2.52.20030208)
AC_REVISION($Revision: 1.7 $)
AC_INIT(code/bcpp.cpp)
AC_CONFIG_HEADER(code/autoconf.h:config_h.in)
CF_CHECK_CACHE
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_LANG_CPLUSPLUS
AC_EXEEXT
AC_OBJEXT

CF_DISABLE_ECHO
CF_GXX_WARNINGS

AC_STDC_HEADERS
AC_CHECK_HEADERS( \
unistd.h \
)

AC_OUTPUT(makefile code/makefile,,,cat)
